--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -72,7 +72,7 @@
 	<script>
 
 	</script>
-	<script src="dataAccessLayer.js" type="text/javascript"></script>
+	<script src="dataAccessLayer.js" type="module"></script>
 
 </body>
 </html>
