--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="popcorn-1614707.ico">
 	<link rel="shortcut icon" href="#" />
-	<script async src="main.js" type="text/javascript"></script>
+	<script async src="main.js" type="module"></script>
 
 </head>
 <body>
