--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -49,7 +49,7 @@
 				<h2>Favourites</h2>
 				<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
 				<ul id="favourite-movies-list"></ul>
-				<button type="button" id="show-favourite-movies" onclick="displayFavouriteMovies()">Show</button>
+				<button type="button" id="show-favourite-movies">Show</button>
 			</div>
 		</div>
 
