--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -49,11 +49,18 @@
 			<div id="favourite-movies-content-container">
 				<h2>Favourites</h2>
 				<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
-				<ul id="favourite-movies-list"></ul>
+				<ul id="favourite-movies-list">
+					<li id="testLi">
+						<div id="testDiv">
+							<span id="title-li">The Testing of CSS</span><br>
+							<span id="year-li">2020</span>
+							<span id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</span>
+						</div>
+					</li>
+				</ul>
 				<button type="button" id="show-favourite-movies">Show</button>
 			</div>
 		</div>
-
 
 		<!--Main content: search bar and results-->
 		<div id="main-content-container">
