working on centering content of sidebar

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -52,9 +52,11 @@
 				<ul id="favourite-movies-list">
 					<li id="testLi">
 						<div id="testDiv">
-							<span id="title-li">The Testing of CSS</span><br>
-							<span id="year-li">2020</span>
-							<span id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</span>
+							<div id="title-year-li">
+								<span id="title-li">The Testing of CSS and the wizards of oz in movie</span><br>
+								<span id="year-li">2020</span>
+							</div>
+							<div id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</div>
 						</div>
 					</li>
 				</ul>
