--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -35,6 +35,7 @@
 
 		<!-- HTML for favourite movies list -->
 		<div id="favourite-movies-container">
+
 			<!--
 			  A hidden checkbox is used as click receiver,
 			  so you can use the :checked selector on it.
@@ -49,19 +50,18 @@
 			<div id="favourite-movies-content-container">
 				<h2>Favourites</h2>
 				<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
-				<ul id="favourite-movies-list">
-					<li id="testLi">
-						<div id="testDiv">
-							<div id="title-year-li">
-								<span id="title-li">The Testing of CSS and the wizards of oz in movie</span><br>
-								<span id="year-li">2020</span>
-							</div>
-							<div id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</div>
+				<div id="favourite-movies-list">
+					<div id="testDiv">
+						<div id="title-year-li">
+							<span id="title-li">The Testing of CSS and the wizards of oz in movie</span><br>
+							<span id="year-li">2020</span>
 						</div>
-					</li>
-				</ul>
+						<div id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</div>
+					</div>
+				</div>
 				<button type="button" id="show-favourite-movies">Show</button>
 			</div>
+
 		</div>
 
 		<!--Main content: search bar and results-->
