unsure what these changes are, they are left uncommited from 1 month ago

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -53,7 +53,7 @@
 				<div id="favourite-movies-list">
 					<div id="testDiv">
 						<div id="title-year-li">
-							<span id="title-li">The Testing of CSS and the wizards of oz in movie</span><br>
+							<span id="title-li">The Testing of CSS wordwordword</span><br>
 							<span id="year-li">2020</span>
 						</div>
 						<div id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</div>
