--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -48,16 +48,13 @@
 
 			<div id="favourite-movies-content-container">
 
-				<div id="firebaseui-auth-container"></div>
-				<div id="sign-in-status"></div>
-				<form id="sign-in-form">
-					<label for="email">Email:</label><input type="text" id="email"><br>
-					<label for="password">Password:</label><input type="text" id="password">
-				</form>
-				<div id="sign-in"></div>
+				<div id="firebase-auth-container">
+					<div id="firebaseui-signup-container"></div>
+					<div id="sign-in-status"></div>
+					<div id="sign-out"></div>
+				</div>
 
-
-				<div id="favourite-title-and-list">
+				<div id="title-and-list-container">
 					<h3>Your favourites</h3>
 					<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
 					<div id="favourite-movies-list">
