--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -20,12 +20,10 @@
 	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
 
-	<script>
-
-	</script>
 	<script src="dataAccessLayer.js" type="text/javascript"></script>
-
 	<script async src="main.js" type="text/javascript"></script>
 
 </head>
