pushing stable version, fixed adding favorites

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
 	<title>Simple IMDB Search</title>
@@ -30,6 +30,8 @@
 <body>
 
 	<div id="container">
+
+		<div class=""
 
 		<!-- HTML for favourite movies list -->
 		<div id="favourite-movies-container">
@@ -72,12 +74,11 @@
 			</div>
 		</div>
 
-
 		<!--Main content: search bar and results-->
 		<div id="main-content-container">
-			<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png"></a>
+			<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png" alt="Popcorn logo"></a>
 			<h1 id="title">Simple IMDB Search</h1>
-			<form action="" id="search-form" method="get" name="search-form" autocomplete="off">
+			<form id="search-form" method="get" name="search-form" autocomplete="off">
 				<input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="fa fa-search"></i></button>
 			</form>
 			<div id="result-container"></div>
