--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -40,7 +40,21 @@
 				</div>
 
 				<div id="title-and-list-container">
-					<h3>Your favourites</h3> <i class="fas fa-pen"></i>
+					<h3>Your favourites</h3><i class="fa fa-pencil
+
+
+
+
+
+
+
+
+
+
+
+
+
+" aria-hidden="true"></i>
 					<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
 					<div id="favourite-movies-list">
 	<!--					<div id="testDiv">-->
