progress påush, working on edit

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -8,6 +8,7 @@
 
 	<link href="design.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 	<link rel="shortcut icon" href="popcorn-1614707.ico">
 	<link rel="shortcut icon" href="#" />
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
@@ -40,21 +41,8 @@
 				</div>
 
 				<div id="title-and-list-container">
-					<h3>Your favourites</h3><i class="fa fa-pencil
-
-
-
-
-
-
-
-
-
-
-
-
-
-" aria-hidden="true"></i>
+					<h3>Your favourites</h3><span id="edit-favourite-movies-icon"> </span>
+<!--					<i id="edit-favourite-movies-icon" class="fa fa-pencil" aria-hidden="true"></i><i id="confirm-favourite-movies-icon" class="fa fa-check"></i>-->
 					<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
 					<div id="favourite-movies-list">
 	<!--					<div id="testDiv">-->
