changed getUserAuthState to getAuth

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -41,18 +41,8 @@
 
 				<div id="title-and-list-container">
 					<h3>Your favourites</h3><span id="edit-favourite-movies-icon"> </span>
-<!--					<i id="edit-favourite-movies-icon" class="fa fa-pencil" aria-hidden="true"></i><i id="confirm-favourite-movies-icon" class="fa fa-check"></i>-->
-					<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
-					<div id="favourite-movies-list">
-	<!--					<div id="testDiv">-->
-	<!--						<div id="title-year-li">-->
-	<!--							<span id="title-li">The Testing of CSS wordwordword</span><br>-->
-	<!--							<span id="year-li">2020</span>-->
-	<!--						</div>-->
-	<!--						<div id="rating-li"><i class="fa fa-star" aria-hidden="true"></i> 9.5</div>-->
-	<!--					</div>-->
-	<!--					this code is for testing a design of movie lists-->
-					</div>
+					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
+					<div id="favourite-movies-list"></div>
 					<button type="button" id="show-favourite-movies">Show</button>
 				</div>
 
