--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -36,8 +36,7 @@
 				<div id="firebase-auth-container">
 					<div id="firebaseui-signup-container"></div>
 					<div id="sign-in-status"></div>
-					<br>
-					<div id="sign-out"></div>
+					<div id="sign-out">Log out</div>
 				</div>
 
 				<div id="title-and-list-container">
@@ -45,6 +44,7 @@
 					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
 					<div id="favourite-movies-list"></div>
 					<button type="button" id="show-favourite-movies">Show</button>
+					<button class="btn btn-3 btn-3a icon-cart">Log out</button>
 				</div>
 
 			</div>
