undid all the styling for  buttons in sidebar
will try to implement splash screen

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -36,7 +36,7 @@
 				<div id="firebase-auth-container">
 					<div id="firebaseui-signup-container"></div>
 					<div id="sign-in-status"></div>
-					<button class="sidebar-btn" id="sign-out">Log out</button>
+					<div id="sign-out">Log out</div>
 				</div>
 
 				<div id="title-and-list-container">
