working on styling sidbar

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -39,6 +39,11 @@
 					<div id="sign-out">Log out</div>
 				</div>
 
+				<div id="firebase-test">
+					<div id="signup-test">Welcome, Person</div>
+					<button id="sign-out-test" class="btn">Log out</button>
+				</div>
+
 				<div id="title-and-list-container">
 					<h3>Your favourites</h3><span id="edit-favourite-movies-icon"> </span>
 					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
