working edit conrim button

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -40,13 +40,13 @@
 					<div id="auth-status">
 						<span id="auth-welcome"></span><span id="auth-name"></span>
 					</div>
-					<button id="sign-out-container">
-						<span id="sign-out" class="sidebar-btn">Log out</span>
+					<button id="sign-out-container" class="btn">
+						<span id="sign-out">Log out</span>
 					</button>
 				</div>
 
 				<div id="title-and-list-container">
-					<h3>Your favourites</h3><span id="edit-favourite-movies-icon"> </span>
+					<h3>Your favourites</h3><span id="icon-container"><span id="edit-favourite-movies-icon" class="btn"></span></span>
 					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
 					<div id="favourite-movies-list"></div>
 					<button type="button" id="show-favourite-movies">Show</button>
