progress button resdeisgn

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -49,7 +49,7 @@
 					<h3>Your favourites</h3><span id="icon-container"><span id="edit-favourite-movies-icon" class="btn"></span></span>
 					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
 					<div id="favourite-movies-list"></div>
-					<button type="button" id="show-favourite-movies">Show</button>
+					<button type="button" id="show-favourite-movies" class="btn">Show</button>
 				</div>
 
 			</div>
@@ -72,7 +72,7 @@
 				<div class="modal-content">
 					<span class="close">&times;</span>
 					<p>Save to favourites?</p>
-					<button type="button" id="save">Save</button> <button type="button" id="cancel">Cancel</button>
+					<button type="button" id="save" class="btn">Save</button> <button type="button" id="cancel">Cancel</button>
 				</div>
 			</div>
 		</div>
