progress push loading sidebar

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -35,6 +35,8 @@
 
 			<div id="favourite-movies-content-container">
 
+				<div id="loading-sidebar" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+
 				<div id="firebase-auth-container">
 					<div id="firebaseui-signup-container"></div>
 					<div id="auth-status">
@@ -44,8 +46,8 @@
 						<span id="sign-out">Log out</span>
 					</button>
 				</div>
+				<hr>
 				<div id="title-and-list-container">
-					<hr>
 					<h3>Your favourites</h3><span id="icon-container"><span id="edit-favourite-movies-icon" class="btn"></span></span>
 					<span id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</span>
 					<div id="favourite-movies-list"></div>
