--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -78,6 +78,7 @@
 				</div>
 			</div>
 
+			<!-- modal if movie already in favourites -->
 			<div id="modal-box-already-added" class="modal-box">
 				<div class="modal-content">
 					<span class="close">&times;</span>
