--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
@@ -17,6 +17,14 @@
 </head>
 <body>
 
+<section class="curved"></section>
+
+<a href="/index.html" id="logo"><img src="https://www.tbdevstuff.live/Webutveckling2_Klient/popcorn-1614707.png" alt="Popcorn logo"></a>
+<h1 id="title">Simple IMDB Search</h1>
+<form id="search-form" method="get" name="search-form" autocomplete="off">
+    <input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button  id="main-search-button" type="submit" class="btn"><i class="fa fa-search"></i></button>
+</form>
+
 <div id="result-container">
     <div class="movie-container">
         <a href="https://www.imdb.com/title/tt0454349/"><img class="movie-poster-anchor" src="https://m.media-amazon.com/images/M/MV5BYzc3OGZjYWQtZGFkMy00YTNlLWE5NDYtMTRkNTNjODc2MjllXkEyXkFqcGdeQXVyNjExODE1MDc@._V1_SX300.jpg"></a>
@@ -25,24 +33,12 @@
             <span class="actors">James Arnold Taylor, Maryke Hendrikse, Lee Tockar, Ashleigh Ball</span>
             <span class="awards">1 win &amp; 5 nominations.</span>
         </div>
-        <div class="rating">
-            <i aria-hidden="true" class="fa fa-star"></i>
-            <span class="rating-score">4.9</span>
-            <span class="rating-max">/10</span>
-        </div>
-    </div>
-
-    <div class="movie-container">
-        <a href="https://www.imdb.com/title/tt0454349/"><img class="movie-poster-anchor" src="https://m.media-amazon.com/images/M/MV5BYzc3OGZjYWQtZGFkMy00YTNlLWE5NDYtMTRkNTNjODc2MjllXkEyXkFqcGdeQXVyNjExODE1MDc@._V1_SX300.jpg"></a>
-        <div class="text">
-            <span class="title-year">Johnny Test (2005-2014)</span>
-            <span class="actors">James Arnold Taylor, Maryke Hendrikse, Lee Tockar, Ashleigh Ball</span>
-            <span class="awards">1 win &amp; 5 nominations.</span>
-        </div>
-        <div class="rating">
-            <i aria-hidden="true" class="fa fa-star"></i>
-            <span class="rating-score">4.9</span>
-            <span class="rating-max">/10</span>
+        <div class="rating-container">
+            <div class="rating">
+                <i aria-hidden="true" class="fa fa-star"></i>
+                <span class="rating-score">7.5</span>
+                <span class="rating-max">/10</span>
+            </div>
         </div>
     </div>
 
@@ -73,7 +69,6 @@
             <span class="rating-max">/10</span>
         </div>
     </div>
-
 </div>
 
 </body>
