done with test design but didnt change over yet

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
@@ -40,6 +40,9 @@
                 <span class="rating-max">/10</span>
             </div>
         </div>
+        <span class="save-to-favorites">
+            <i class="fas fa-save"></i>
+        </span>
     </div>
 
     <div class="movie-container">
