--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/test.html
@@ -26,6 +26,8 @@
 </form>
 
 <div id="result-container">
+
+
     <div class="movie-container">
         <a href="https://www.imdb.com/title/tt0454349/"><img class="movie-poster-anchor" src="https://m.media-amazon.com/images/M/MV5BYzc3OGZjYWQtZGFkMy00YTNlLWE5NDYtMTRkNTNjODc2MjllXkEyXkFqcGdeQXVyNjExODE1MDc@._V1_SX300.jpg"></a>
         <div class="text">
@@ -43,6 +45,18 @@
         <span class="save-to-favorites">
             <i class="fas fa-save"></i>
         </span>
+    </div>
+
+    <div class="movie-container" style="z-index: -1;">
+        <a href="https://www.imdb.com/title/tt0454349/"><img id="movie-poster-anchor" src="https://m.media-amazon.com/images/M/MV5BYzc3OGZjYWQtZGFkMy00YTNlLWE5NDYtMTRkNTNjODc2MjllXkEyXkFqcGdeQXVyNjExODE1MDc@._V1_SX300.jpg"></a>
+        <div class="text">
+            <span class="title-year">Johnny Test (2005–2014)</span><span class="actors">James Arnold Taylor, Maryke Hendrikse, Lee Tockar, Ashleigh Ball</span><span class="awards">1 win &amp; 5 nominations.</span>
+        </div>
+        <div class="rating-container">
+            <div class="rating">
+                <i aria-hidden="true" class="fa fa-star"></i><span class="rating-score">4.9</span><span class="rating-max">/10</span>
+            </div>
+        </div>
     </div>
 
     <div class="movie-container">
