progress pushg endless scroll

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -68,9 +68,8 @@
 			</form>
 
 			<div id="loading-results" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-			<div id="result-container">
 
-			</div>
+			<div class="result-container"></div>
 
 			<!-- modal to allow for saving a movie -->
 			<div id="modal-box" class="modal-box">
