about to change vars to allow for darkmode

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -24,7 +24,9 @@
 
 			<div id="db-toggle-container">
 				<i class="fas fa-database"></i> DB
+
 				<!-- HTML for favourite movies list -->
+				<div id="wrapper"></div>
 				<div id="favourite-movies-container" class="hide">
 					<div id="favourite-movies-flex-container">
 						<div id="loading-sidebar" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
@@ -47,10 +49,13 @@
 					</div>
 				</div>
 			</div>
+
 			<span id="name">Quix.</span>
+
 			<div id="dark-mode-toggle-container">
-				<i class="fas fa-moon"></i>
+
 			</div>
+
 			<div id="return-to-top-container">
 				<i class="fas fa-arrow-up"></i>
 			</div>
