--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -31,10 +31,9 @@
 
 			<div id="db-toggle-container">
 				<div id="db-styling-container" class="btn">
-					Your favourites
+					<span>Your favourites</span>
 				</div>
 				<!-- content for favourite movies list -->
-				<div id="wrapper"></div>
 				<div id="favourite-movies-container" class="hide">
 					<div id="favourite-movies-flex-container">
 						<div id="loading-sidebar" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
