--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -59,7 +59,7 @@
 
 		</nav>
 
-		<section class="curved"></section>
+<!--		<section class="curved"></section>-->
 
 		<!--Main content: search bar and results-->
 		<div id="main-content-container">
