--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -25,7 +25,7 @@
 
 			<div id="dark-mode-toggle-container"></div>
 
-			<div id="return-to-top-container">
+			<div id="scroll-to-top-container">
 			</div>
 
 			<div id="db-toggle-container">
@@ -81,7 +81,6 @@
 
 			<!-- modal to allow for saving a movie -->
 			<div id="modal-box" class="modal-box">
-				<!-- Modal content -->
 				<div class="modal-content">
 					<span class="close">&times;</span>
 					<div class="modal-flex-container">
