--- a/quix/index.html
+++ b/quix/index.html
@@ -70,7 +70,7 @@
 
     <!--Main content: search bar and results-->
     <div id="main-content-container">
-      <a href="/index.html" id="logo"><img src="/img/popcorn-1614707.png" alt="Logo"></a>
+      <a href="/index.html" id="logo"><img src="img/popcorn-1614707.png" alt="Logo"></a>
 
       <div id="site-title">
         <span id="title">Quix.</span>
