progress, sticky title

--- a/quix/index.html
+++ b/quix/index.html
@@ -72,12 +72,14 @@
     <div id="main-content-container">
       <a href="/index.html" id="logo"><img src="img/popcorn-1614707.png" alt="Logo"></a>
 
-      <div id="site-title">
-        <span id="title">Quix.</span>
+
+        <div id="title-container">
+          <span id="title">Quix.</span>
+        </div>
         <div id="subtitle-flex-container">
           <span id="subtitle">Quickly index IMDB</span>
         </div>
-      </div>
+
 
       <form id="search-form" method="get" name="search-form" autocomplete="off">
         <input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button  id="main-search-button" type="submit" class="btn"><i class="fa fa-search"></i></button>
